--- a/web wiki/templates/base.j2
+++ b/web wiki/templates/base.j2
@@ -29,7 +29,8 @@
             <hr/>
             <a href="/regions">Regions</a> | 
             <a href="/factions">Factions</a> | 
-            <a href="/troop-classes">Troop Classes</a> | 
+            <a href="/troop-classes">Troop Classes</a> |
+            <a href="/troops">Troops</a> |
             <a href="/leaders">Leaders</a>
             <hr/>
 
