--- a/web wiki/templates/troops.j2
+++ b/web wiki/templates/troops.j2
@@ -11,45 +11,29 @@
     <tr>
         <th>Icon</th>
         <th>Name/Type</th>
-        <th>Attributes</th>
+        <th>Grade</th>
         <th>Speciality</th>
         <th>Primary W.</th>
         <th>Second. W.</th>
-        <th>Form.</th>
-        <th>Social C.</th>
         <th>Armour</th>
         <th>Mount</th>
         <th>Skill</th>
     </tr>
-    {% for unit in leaders %}
+    {% for unit in troops %}
     <tr>
         <td><img src="{{unit["icon"][0]}}" alt="{{unit["icon"][1]}}" title="{{unit["icon"][1]}}"></td>
-        <td><a href="">{{unit["name"]}}</a><br>{{unit["type"]}}</td>
-        
-        <td>
-            <table class="inner attributes">
-                <tr>
-                    <th>STR:</th><td>{{unit["strength"]}}</td>
-                    <th>DEX:</th><td>{{unit["dexterity"]}}</td>
-                    <th>AGL:</th><td>{{unit["agility"]}}</td>
-                    <th>CON:</th><td>{{unit["constitution"]}}</td>
-                </tr>
-                <tr>
-                    <th>INT:</th><td>{{unit["intelligence"]}}</td>
-                    <th>WIS:</th><td>{{unit["wisdom"]}}</td>
-                    <th>CHR:</th><td>{{unit["charisma"]}}</td>
-                </tr>
-            </table>
-        </td>
+        <td><a href="">{{unit["name"]}}</a><br>{{unit["troop-class"]}}</td>
+
+        <td>{{unit["grade"]}}</td>
 
         <td>
             <table class="inner">
                 <tr>
                     <th>Melee: </th><td>{{unit["melee-speciality"]}}</td>
                 </tr><tr>
-                    <th>Range: </th><td>{{unit["range-speciality"]}}</td>
+                    <th>Defence: </th><td>{{unit["range-speciality"]}}</td>
                 </tr><tr>
-                    <th>Cavalry: </th><td>{{unit["cavalry-speciality"]}}</td>
+                    <th>Range: </th><td>{{unit["cavalry-speciality"]}}</td>
                 </tr>
             </table>
         </td>
@@ -63,12 +47,6 @@
             <b>m: </b>{{unit["secondary-main-weapon"][1]}}<br>
             <b>s: </b>{{unit["secondary-sub-weapon"][1]}}
         </td>
-
-        <td>
-            <ul>{% for formation in unit["formations"] %}<li>{{formation}}</li>{% endfor %}</ul>
-        </td>
-
-        <td>{{unit["social-class"]}}</td>
 
         <td>
             {{unit["armour"][0]}}<br>
