--- a/web wiki/templates/factions.j2
+++ b/web wiki/templates/factions.j2
@@ -3,6 +3,14 @@
 
 {% block content %}
 <h2>Factions</h2>
-
+<table>
+    <tr><th>Name</th><th>Troop</th><th>Region</th></tr>
+    {% for faction in factions %}
+    <tr>
+        <td>{{faction["name"]}}</td>
+        <td>{{faction["troop"]}}</td>
+        <td>{{faction["region"]}}</td>
+    </tr>
+    {% endfor %}
 {% endblock %}
 
