added weapon list. it has all the fields but needs to be cleaned up

--- a/web wiki/templates/base.j2
+++ b/web wiki/templates/base.j2
@@ -31,7 +31,8 @@
             <a href="/factions">Factions</a> | 
             <a href="/troop-classes">Troop Classes</a> |
             <a href="/troops">Troops</a> |
-            <a href="/leaders">Leaders</a>
+            <a href="/leaders">Leaders</a> |
+            <a href="/weapons">Weapons</a>
             <hr/>
 
             {% block content %}{% endblock %}
