added factions to leader list. added image to single leader page. added faction icons to faction list. disabled Troop field on faction list because it didn't exist and made page crash

--- a/web wiki/templates/factions.j2
+++ b/web wiki/templates/factions.j2
@@ -4,9 +4,10 @@
 {% block content %}
 <h2>Factions</h2>
 <table>
-    <tr><th>Name</th><th>Troop</th><th>Region</th></tr>
+    <tr><th></th><th>Name</th><th>Troop</th><th>Region</th></tr>
     {% for faction in factions %}
     <tr>
+        <td><img src="{{faction["icon"]}}"></td>
         <td>{{faction["name"]}}</td>
         <td>{{faction["troop"]}}</td>
         <td>{{faction["region"]}}</td>
