--- a/web wiki/templates/leader.j2
+++ b/web wiki/templates/leader.j2
@@ -13,12 +13,13 @@
 <div class="sidebar">
 
 <h3>{{name}}</h3>
+<img src="{{image}}">
 <img src="{{sprite_icon}}">
 </div>
 
 
 
-{% for paragraph in history %}
+{% for paragraph in lore %}
 <p>{{paragraph}}</p>
 {% endfor %}
 
