--- a/web wiki/templates/factions.j2
+++ b/web wiki/templates/factions.j2
@@ -4,12 +4,14 @@
 {% block content %}
 <h2>Factions</h2>
 <table>
-    <tr><th></th><th>Name</th><th>Troop</th><th>Region</th></tr>
+    <tr><th></th><th>Name</th><th>Strengths</th><th>Weaknesses</th><th>Favoured Troop</th><th>Region</th></tr>
     {% for faction in factions %}
     <tr>
         <td><img src="{{faction["icon"]}}"></td>
         <td>{{faction["name"]}}</td>
-        <td>{{faction["troop"]}}</td>
+        <td>{{faction["strengths"]}}</td>
+        <td>{{faction["weaknesses"]}}</td>
+        <td>{{faction["favoured-troop"]}}</td>
         <td>{{faction["region"]}}</td>
     </tr>
     {% endfor %}
