can filter by faction on leader list (you have to move through faction list to get that filter). icon a bit bigger since we seem to have space, and also centered

--- a/web wiki/templates/factions.j2
+++ b/web wiki/templates/factions.j2
@@ -4,11 +4,12 @@
 {% block content %}
 <h2>Factions</h2>
 <table>
-    <tr><th></th><th>Name</th><th>Troop</th><th>Region</th></tr>
+    <tr><th></th><th>Name</th><th>Leaders</th><th>Troop</th><th>Region</th></tr>
     {% for faction in factions %}
     <tr>
         <td><img src="{{faction["icon"]}}"></td>
         <td>{{faction["name"]}}</td>
+        <td><a href="/leaders?faction={{faction["id"]}}">See leaders</a></td>
         <td>{{faction["troop"]}}</td>
         <td>{{faction["region"]}}</td>
     </tr>
