--- a/web wiki/templates/base.j2
+++ b/web wiki/templates/base.j2
@@ -12,14 +12,15 @@
         table { border-collapse: collapse; border-spacing: 0; margin-top: 12px }
         hr { margin: 6px 0 6px 0; height: 1px; border: 0; border-bottom: 1px solid #ccc; display: block; padding: 0 }
         th { text-align: left; color: #fefefe; font-size: 12px; font-weight: normal; padding: 6px; border-bottom: 1px solid #604030; border-top: 1px solid #604030; margin-bottom: 28px }
-        #content { background: #fefefe; border-left: 1px solid #ccc; border-right: 1px solid #ccc; width: 1300px; margin: 0 auto 0 auto; height: 100% }
+        #content { background: #fefefe; border-left: 1px solid #ccc; border-right: 1px solid #ccc; width: 1300px; margin: 0 auto 0 auto; min-height: 100% }
         #inner-content { padding: 70px; padding-top: 40px }
         a{ color: #a13c12 }
         tr:nth-child(odd) td { background: #f2f3f4 }
         td{ padding: 6px; font-size: 12px; vertical-align:top }
         .inner td{ padding: 2px; background: 0 !important; border: 0; color: #000; padding-right: 14px }
         ul{ display: block; padding: 0; margin: 0 }
-        li{ display: block; padding: 0; margin: 0 }
+        li{  padding: 0; margin: 0; margin-left: 12px }
+        .inner { margin-top: 0 }
         .inner th{ padding:2px; background: 0; border: 0; font-weight:bold; padding-right:0; color: #000 }
         p{ font-size:14px; font-family: "DejaVu Sans"; line-height: 22.4px }
         .r{text-align: right }
